--- a/Testbed.yaml
+++ b/Testbed.yaml
@@ -1,19 +1,10 @@
 
-
 devices:
-  device1:
-    alias: iosxe1
-    type: iosxe
+  clab-frrlab-router2:
+    alias: router2
+    type: linux
     connections:
       ssh:
-        ip: 192.168.1.1
-        username: admin
-        password: admin123
-  device2:
-    alias: iosxe2
-    type: iosxe
-    connections:
-      ssh:
-        ip: 192.168.1.2
-        username: admin
-        password: admin123
+        ip: 192.168.1.2  # Replace with the actual IP address of the container
+        username: clab_admin  # Replace with the actual username
+        password: clab_password  # Replace with the actual password
